# ratflow-core

./: CMakeLists.txt  README.md
deb/: config  postinst  ratflow-core_1.1.1-2_amd64.deb
deb/bionic/: requires
deb/common/: description-pak  postinstall-pak
deb/focal/: requires
docker/bionic/: Dockerfile  README  apt.nixlab.in.list
docker/focal/: Dockerfile  README  apt.nixlab.in.list  entrypoint.sh
system/etc/profile.d/: ratflow-aliases.sh
system/usr/share/ratflow/init/: 00_init_core  90_init_default_profile  common
system/usr/share/ratflow/profiles/core/: i3blocks.conf
system/usr/share/ratflow/profiles/core/config.d/: 11-outputs  13-wallpaper  20-keys-apps-core  30-theme  31-bar  90-exec
system/usr/share/xsessions/: ratflow.desktop
